--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-    <h2>asdasedasda</h2>
-<body>
-
-</body>
+<html lang="es">
+    <head> <!-- Aqui solo se muestran los metadatos, nada de aqui se muestra-->
+        <meta charset="UTF-8">
+        <title>Primer Html</title>
+        <!--Otras referencias como a los CSS o al archivo JavaScript-->
+    </head>
+    <body>
+    <!--Todo lo que hay aquí se muestra en la pagina web-->
+    <h1>Primer Html</h1>
+    <h2>Primer Html</h2>
+    <h3>Primer Html</h3>
+    <h4>Primer Html</h4>
+    <span>Primer Html</span>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequuntur cupiditate deserunt! Aliquid
+        asperiores blanditiis consequuntur, cum, deleniti dicta distinctio eligendi illo nobis pariatur placeat
+        praesentium, quod sit tempora totam.
+    </p>
+    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci est ex expedita id ipsum maxime, minima
+        neque obcaecati perspiciatis similique sunt tempore temporibus velit. Blanditiis consequatur deleniti et
+        possimus sint!
+    </div>
+    </body>
 </html>
