--- a/Index.html
+++ b/Index.html
@@ -7,18 +7,19 @@
     </head>
     <body>
     <!--Todo lo que hay aquí se muestra en la pagina web-->
-    <h1>Primer Html</h1>
-    <h2>Primer Html</h2>
-    <h3>Primer Html</h3>
-    <h4>Primer Html</h4>
-    <span>Primer Html</span>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequuntur cupiditate deserunt! Aliquid
-        asperiores blanditiis consequuntur, cum, deleniti dicta distinctio eligendi illo nobis pariatur placeat
-        praesentium, quod sit tempora totam.
-    </p>
-    <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci est ex expedita id ipsum maxime, minima
-        neque obcaecati perspiciatis similique sunt tempore temporibus velit. Blanditiis consequatur deleniti et
-        possimus sint!
-    </div>
+        <h1>Primer Html</h1>
+        <h2>Primer Html</h2>
+        <h3>Primer Html</h3>
+        <h4>Primer Html</h4>
+        <span>Primer Html</span>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequuntur cupiditate deserunt! Aliquid
+            asperiores blanditiis consequuntur, cum, deleniti dicta distinctio eligendi illo nobis pariatur placeat
+            praesentium, quod sit tempora totam.
+        </p>
+        <div> Hola mundo</div><!--Comúnmente conocido como Contenedor-->
+        <div style="color: red"> Adios mundo</div>
+        <img src="img/1366_2000.jpeg" alt="jongler">
+        <br> <!--breakpoint-->
+        <a href="https://www.google.es">Google</a>
     </body>
 </html>
