--- a/Index.html
+++ b/Index.html
@@ -2,24 +2,66 @@
 <html lang="es">
     <head> <!-- Aqui solo se muestran los metadatos, nada de aqui se muestra-->
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="Styles.css">
         <title>Primer Html</title>
         <!--Otras referencias como a los CSS o al archivo JavaScript-->
     </head>
     <body>
     <!--Todo lo que hay aquí se muestra en la pagina web-->
-        <h1>Primer Html</h1>
-        <h2>Primer Html</h2>
-        <h3>Primer Html</h3>
-        <h4>Primer Html</h4>
-        <span>Primer Html</span>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequuntur cupiditate deserunt! Aliquid
-            asperiores blanditiis consequuntur, cum, deleniti dicta distinctio eligendi illo nobis pariatur placeat
-            praesentium, quod sit tempora totam.
-        </p>
-        <div> Hola mundo</div><!--Comúnmente conocido como Contenedor-->
-        <div style="color: red"> Adios mundo</div>
-        <img src="img/1366_2000.jpeg" alt="jongler">
-        <br> <!--breakpoint-->
-        <a href="https://www.google.es">Google</a>
+    <h1>Primer Html</h1>
+    <h2>Primer Html</h2>
+    <h3>Primer Html</h3>
+    <h4>Primer Html</h4>
+    <span>Primer Html</span>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet consequuntur cupiditate deserunt! Aliquid
+        asperiores blanditiis consequuntur, cum, deleniti dicta distinctio eligendi illo nobis pariatur placeat
+        praesentium, quod sit tempora totam.
+    </p>
+    <div> Hola mundo</div><!--Comúnmente conocido como Contenedor-->
+    <div style="color: red"> Adios mundo</div>
+    <img src="img/1366_2000.jpeg" alt="jongler">
+    <br> <!--breakpoint-->
+    <a href="https://www.google.es">Google</a>
+    <br>
+    <!--Tablas-->
+    <table style="border: 1px solid black;border-collapse: collapse;margin: auto;">
+        <tr>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+        </tr>
+        <tr>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+            <td style="border: 1px solid black;padding: 10px">Celda</td>
+        </tr>
+    </table>
+    ordered list
+    unordered list
+    <h1>Lista ordenada (Ordered List) (OL)</h1>
+    <ol style="list-style-type: square;">
+        <li>Item 1</li>
+        <li>Item 2</li>
+    </ol>
+    <h1>Lista desordenada (Unordered List) (UL)</h1>
+    <ul style="list-style-type: armenian;">
+        <li>Item 1</li>
+        <li>Item 2</li>
+    </ul>
     </body>
 </html>
