--- a/Index.html
+++ b/Index.html
@@ -51,6 +51,7 @@
             <td style="border: 1px solid black;padding: 10px">Celda</td>
         </tr>
     </table>
+    <!--Listas-->
     ordered list
     unordered list
     <h1>Lista ordenada (Ordered List) (OL)</h1>
@@ -63,5 +64,15 @@
         <li>Item 1</li>
         <li>Item 2</li>
     </ul>
+    <form action="" method="get">
+        <fieldset>
+            <legend>Datos personales</legend>
+            <label>Nombre</label>
+            <label>
+                <input type="text">
+            </label>
+            <input type="submit" value="Enviar">
+        </fieldset>
+    </form>
     </body>
 </html>
