--- a/Index.html
+++ b/Index.html
@@ -67,7 +67,11 @@
     <form action="" method="get">
         <fieldset>
             <legend>Datos personales</legend>
-            <label>Nombre</label>
+            <label for="Nombre">Nombre</label>
+            <label>
+                <input id="Nombre" type="text">
+            </label>
+            <label>Apellido</label>
             <label>
                 <input type="text">
             </label>
