--- a/Ejercicios/Ejercicio1.html
+++ b/Ejercicios/Ejercicio1.html
@@ -11,7 +11,7 @@
     <li>Basic text sections</li>
     <li>Lists</li>
     <ol style="list-style-type: upper-alpha;">
-        <li>Ordened</li>
+        <li>Ordered</li>
         <ol>
             <li>Label OL</li>
             <ol style="list-style-type: lower-alpha;">
@@ -21,7 +21,7 @@
             <li>Label LI</li>
         </ol>
 
-        <li>Ordened</li>
+        <li>Unordered</li>
         <ol>
             <li>Label UL</li>
             <ol style="list-style-type: lower-alpha;">
