--- a/Ejercicios/Ejercicio2/Ejercicio2.html
+++ b/Ejercicios/Ejercicio2/Ejercicio2.html
@@ -1,30 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Ejercicio 2</title>
 </head>
 <body>
-<table style="border: 1px solid black;border-collapse: collapse;margin: auto;">
-    <tr>
-        <td rowspan="2" colspan="2" style="border: 1px solid black;padding: 10px">Celda</td>
-        <td style="border: 1px solid black;padding: 10px">Celda</td>
+<table style="table-layout: fixed; width: auto; margin: auto;border: 1px dashed darkred;">
+    <tr style="text-align: center;padding: 10px;background-color: #FAEBD7;">
+        <td><b>Número del catalogo</b></td>
+        <td><b>Nombre</b></td>
+        <td><b>Imagen</b></td>
+        <td><b>Web donde lo encontramos</b></td>
+        <td><b>Tienda</b></td>
+        <td><b>Precio</b></td>
     </tr>
-    <tr>
-        <td style="border: 1px solid black;padding: 10px">Celda</td>
+    <tr style="text-align:center;padding: 10px">
+        <td>7821562</td>
+        <td>Atari Mini</td>
+        <td><img src="imgs/file%20(2).png" alt="Atari Mini" style="display:block;height: auto"></td>
+        <td><a href="https://www.ebay.es/">https://www.ebay.es/</a></td>
+        <td>E-Bay</td>
+        <td>100€</td>
     </tr>
-    <tr>
-        <td rowspan="3" style="border: 1px solid black;padding: 10px">Celda</td>
-        <td style="border: 1px solid black;padding: 10px">Celda</td>
-        <td style="border: 1px solid black;padding: 10px">Celda</td>
+    <tr style="text-align: center;padding: 10px">
+        <td>243243</td>
+        <td>Super Nintendo Mini</td>
+        <td><img src="imgs/file%20(3).png" alt="Super Nintendo Mini" style="display:block;height: auto"></td>
+        <td rowspan="3" colspan="2"><a href="https://www.amazon.es">https://www.amazon.es</a></td>
+        <td>100€</td>
     </tr>
-    <tr>
-        <td style="border: 1px solid black;padding: 10px">Celda</td>
-        <td style="border: 1px solid black;padding: 10px">Celda</td>
+    <tr style="text-align: center;padding: 10px">
+        <td>593922</td>
+        <td>Megadrive Mini</td>
+        <td><img src="imgs/file%20(4).png" alt="Sega Genesis Mini" style="display:block;height: auto"></td>
+        <td>200€</td>
     </tr>
-    <tr>
-        <td style="border: 1px solid black;padding: 10px">Celda</td>
-        <td style="border: 1px solid black;padding: 10px">Celda</td>
+    <tr style="text-align: center;padding: 10px">
+        <td>293944</td>
+        <td>Playstation Mini</td>
+        <td><img src="imgs/file%20(5).png" alt="Playstation Mini" style="display:block;height: auto"></td>
+        <td>300€</td>
+    </tr>
+    <tr style="text-align: center;padding: 10px;background-color: #FAEBD7;">
+        <td><b>Número del catalogo</b></td>
+        <td><b>Nombre</b></td>
+        <td><b>Imagen</b></td>
+        <td><b>Web donde lo encontramos</b></td>
+        <td><b>Tienda</b></td>
+        <td><b>Precio</b></td>
     </tr>
 </table>
 
