--- a/Ejercicios/Ejercicio4/Ejercicio4/Ejercicio4.html
+++ b/Ejercicios/Ejercicio4/Ejercicio4/Ejercicio4.html
@@ -9,36 +9,36 @@
 <table style="table-layout: fixed; width: auto; margin: auto;border: 1px solid black;">
     <tr>
         <td></td>
-        <td colspan="3">Foto</td>
-        <td colspan="2">Foto</td>
+        <td colspan="3"><img style="width: 30%" src="imgs/img.png" alt="mp3 mini"></td>
+        <td colspan="2"><img style="width: 60%" src="imgs/img_1.png" alt="mp3 Grande"></td>
     </tr>
     <tr>
-        <td>Cosa</td>
-        <td>Cosa</td>
-        <td>Cosa</td>
-        <td>Cosa</td>
-        <td>Cosa</td>
-        <td>Cosa</td>
+        <td><b>Capacidad de almacenamiento</b></td>
+        <td>4GB<br>(1.000 canciones)</td>
+        <td>8GB<br>(2.000 canciones)</td>
+        <td>16GB<br>(4.000 canciones)</td>
+        <td>30GB<br>(7.500 canciones)</td>
+        <td>80GB<br>(20.000 canciones)</td>
     </tr>
     <tr>
-        <td>Cosa</td>
-        <td>Cosa</td>
-        <td>Cosa</td>
-        <td>Cosa</td>
-        <td colspan="2">Cosa</td>
+        <td><b>Colores</b></td>
+        <td><img src="imgs/img_2.png" alt="Color blanco"></td>
+        <td><img src="imgs/img_3.png" alt="Color negro,verde,azul,rosa"></td>
+        <td><img src="imgs/img_4.png" alt="Color negro"></td>
+        <td colspan="2"><img src="imgs/img_5.png" alt="Color blanco y negro"></td>
     </tr>
     <tr>
-        <td>Cosa</td>
-        <td colspan="3">Cosa</td>
-        <td colspan="2">Cosa</td>
+        <td><b>Pantalla</b></td>
+        <td colspan="3">LCD de 3 cm (diagonal) con retroiluminación</td>
+        <td colspan="2">LCD de 6 cm (diagonal) con retroiluminación</td>
     </tr>
     <tr>
-        <td rowspan="2">Cosa</td>
-        <td rowspan="2" colspan="3">Cosa</td>
-        <td colspan="2">Cosa</td>
+        <td rowspan="2"><b>Tiempo de carga</b></td>
+        <td rowspan="2" colspan="3">Unas 3 horas</td>
+        <td colspan="2">Unas 4 horas</td>
     </tr>
     <tr>
-        <td colspan="2">Cosa</td>
+        <td colspan="2">Unas 2 horas para alcanzar el 80% de la capacidad</td>
     </tr>
 </table>
 
