--- a/Ejercicios/Ejercicio4/Ejercicio4/Ejercicio4.html
+++ b/Ejercicios/Ejercicio4/Ejercicio4/Ejercicio4.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
-<table style="table-layout: fixed; width: auto; margin: auto;border: 1px solid black;">
+<h3>Comparativa de reproductores MP3</h3>
+<p style="text-align: justify;margin-bottom: 0;margin-left: 60px">Tabla comparativa de las caracteristicas técnicas de los reproductores MP3</p>
+<table style="table-layout: fixed; width: auto; margin: 0;border: 1px solid black;">
     <tr>
         <td></td>
-        <td colspan="3"><img style="width: 30%" src="imgs/img.png" alt="mp3 mini"></td>
-        <td colspan="2"><img style="width: 60%" src="imgs/img_1.png" alt="mp3 Grande"></td>
+        <td colspan="3"><a href="https://www.amazon.es/Walkman-reproductor-pantalla-Mallalah-port%C3%A1til/dp/B07MVD5XWN/ref=asc_df_B07MVD5XWN?mcid=16f24e172614353f923c4301d422232b&tag=googshopes-21&linkCode=df0&hvadid=699760087422&hvpos=&hvnetw=g&hvrand=17554692901024414764&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9197279&hvtargid=pla-2273483669504&psc=1&gad_source=1"><img style="width: 30%" src="imgs/img.png" alt="mp3 mini"></a></td>
+        <td colspan="2"><a href="https://www.amazon.es/Reproductor-Spotify-ZAQE-Bluetooth-WLAN%EF%BC%8CMP3/dp/B0CYYZ9TK8/ref=asc_df_B0CYYZ9TK8?mcid=df6ba98c03fe3e9db7794330477b9e4c&tag=googshopes-21&linkCode=df0&hvadid=699760087422&hvpos=&hvnetw=g&hvrand=11765462998846914208&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9197279&hvtargid=pla-2333734280575&psc=1&gad_source=1"><img style="width: 60%" src="imgs/img_1.png" alt="mp3 Grande"></a></td>
     </tr>
     <tr>
         <td><b>Capacidad de almacenamiento</b></td>
