--- a/Ejercicios/Repaso/Ej3/Ej3.html
+++ b/Ejercicios/Repaso/Ej3/Ej3.html
@@ -14,8 +14,8 @@
         <td colspan="2"><b>Text</b></td>
     </tr>
     <tr>
-        <td>Text</td>
-        <td>Text</td>
+        <td style="vertical-align: top;text-align: left">Text</td>
+        <td style="vertical-align: bottom;text-align: left">Text</td>
         <td colspan="2">Text</td>
         <td>Text</td>
         <td>Text</td>
