--- a/Ejercicios/PracticaExamen/PracticaExamen.html
+++ b/Ejercicios/PracticaExamen/PracticaExamen.html
@@ -8,13 +8,13 @@
 <body>
 <table>
   <tr>
-    <td rowspan="14" style="background-color: red">Item</td>
+    <td rowspan="14" style="background-color: red;writing-mode: vertical-lr; rotate: 180deg;text-align: center">Item</td>
     <td>Item</td>
     <td rowspan="2"></td>
     <td colspan="4" rowspan="3">Playoffs</td>
     <td rowspan="2"></td>
     <td >Item</td>
-    <td rowspan="14" style="background-color: blue">Item</td>
+    <td rowspan="14" style="background-color: blue;text-align: center; writing-mode: vertical-lr">Item</td>
   </tr>
   <tr>
     <td>Item</td>
