--- a/Ejercicios/CSS/Ej2/Ej2.html
+++ b/Ejercicios/CSS/Ej2/Ej2.html
@@ -1,57 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <link rel="stylesheet" href="styles.css">
   <meta charset="UTF-8">
   <title>Title</title>
 </head>
 <body>
-<p style="text-align: center;margin: 0;font-size: 16px"><a href="https://www.google.com/?hl=es">HORARIO DE CLASE CURSO</a></p>
-<table style="table-layout: fixed; width: auto; margin: auto;">
+
+
+<table style="table-layout: fixed; width: auto; ;">
+  <tr><th colspan="6" style="margin: 0;font-size: 13px"><a href="https://www.google.com/?hl=es">HORARIO DE CLASE CURSO 2018-2019</a></th></tr>
+
   <tr>
-    <th style="border: 1px solid black">HORAS</th>
-    <td><b>MONDAY</b></td>
-    <td><b>TUESDAY</b></td>
-    <td><b>WEDNESDAY</b></td>
-    <td><b>THURSDAY</b></td>
-    <td><b>FRIDAY</b></td>
+    <th class="Dias" style="border: 1px solid black;padding: 0 10px 0 10px;">HORAS</th>
+    <td class="Dias"><b>Lunes</b></td>
+    <td class="Dias"><b>Martes</b></td>
+    <td class="Dias"><b>Miércoles</b></td>
+    <td class="Dias"><b>Jueves</b></td>
+    <td class="Dias"><b>Viernes</b></td>
 
   </tr>
   <tr>
-    <td>8:15</td>
-    <td class="ISO" rowspan="2">ISO</td>
-    <td class="ISO">ISO</td>
-    <td class="ISO">ISO</td>
-    <td class="ISO" colspan="2">ISO</td>
+    <td>8:00</td>
+    <td class="ISO" rowspan="2">Matemáticas</td>
+    <td class="ISO">Lengua</td>
+    <td class="ISO">Inglés</td>
+    <td class="ISO" colspan="2">Ciencias</td>
   </tr>
   <tr>
-    <td>9:15</td>
-    <td class="GBD">GBD</td>
-    <td class="GBD">GBD</td>
-    <td class="GBD">GBD</td>
-    <td class="GBD">GBD</td>
+    <td>9:00</td>
+    <td class="GBD">Historia</td>
+    <td class="GBD">Ciencias</td>
+    <td class="GBD">Matemáticas</td>
+    <td class="GBD">Lengua</td>
   </tr>
   <tr>
-    <td>11:15</td>
+    <td>10:00</td>
     <td colspan="5" style="text-align: center"><b>RECREO</b></td>
 
   </tr>
   <tr>
-    <td>10:15</td>
-    <td class="PAR">PAR</td>
-    <td class="PAR" rowspan="2">PAR</td>
-    <td class="PAR">PAR</td>
-    <td class="PAR">PAR</td>
-    <td class="PAR">PAR</td>
+    <td>10:30</td>
+    <td class="PAR">Inglés</td>
+    <td class="PAR" rowspan="2">Ciencias</td>
+    <td class="PAR">Matemáticas</td>
+    <td class="PAR">Lengua</td>
+    <td class="PAR">Historia</td>
   </tr>
   <tr>
-    <td>11:45</td>
-    <td class="FHW">FHW</td>
-    <td class="FHW">FHW</td>
-    <td class="FHW">FHW</td>
-    <td class="FHW">FHW</td>
+    <td>11:30</td>
+    <td class="FHW">Historia</td>
+    <td class="FHW">Ciencias</td>
+    <td class="FHW">Matemáticas</td>
+    <td class="FHW">Inglés</td>
   </tr>
-
 </table>
+<form>
+  <label for="email">Email</label>
+  <input type="email" id="email" name="email" placeholder="Inserte email del destinatario" required><br>
+  <button>Enviar horario</button>
+</form>
+
 </body>
 </html>
