--- a/Ejercicios/CSS/Ej1/Ej1.html
+++ b/Ejercicios/CSS/Ej1/Ej1.html
@@ -6,8 +6,10 @@
     <title>Title</title>
 </head>
 <body>
-<h3>Comparativa de reproductores MP3</h3>
-<p style="text-align: justify;margin-bottom: 0;margin-left: 60px">Tabla comparativa de las caracteristicas técnicas de los reproductores MP3</p>
+<div>
+    <div>
+        <h1>Ejercicio práctico con tablas</h1>
+    </div>
 <table style="table-layout: fixed; width: auto; margin: 0;border: 1px solid black;">
     <tr>
         <td></td>
@@ -38,18 +40,18 @@
     </tr>
     <tr>
         <td class="firstColumn"><b>Pantalla</b></td>
-        <td class="FondoAzul" colspan="3"><b>LCD de 3 cm (diagonal)</b></td>
-        <td class="FondoAzul" colspan="2"><b>LCD de 6 cm</b> </td>
+        <td class="FondoAzul" colspan="3"><b>3 pulgadas</b></td>
+        <td class="FondoAzul" colspan="2"><b>7 pulgadas</b> </td>
     </tr>
     <tr>
         <td rowspan="2" class="firstColumn"><b>Tiempo de carga</b></td>
-        <td class="FondoAzul" rowspan="2" colspan="3"><b>Unas 3 horas</b></td>
+        <td class="FondoAzul" rowspan="2" colspan="3"><b>1 hora</b></td>
         <td id="Horas" colspan="2"><b>5 horas</b></td>
     </tr>
     <tr>
-        <td class="FondoAzul" colspan="2"><b>Unas 2 horas para alcanzar el 80% de la capacidad</b>  </td>
+        <td class="FondoAzul" colspan="2"><b>30 minutos para 75%</b>  </td>
     </tr>
 </table>
-
+</div>
 </body>
 </html>
