--- a/Ejercicios/Responsive/Index.html
+++ b/Ejercicios/Responsive/Index.html
@@ -10,7 +10,7 @@
 
 <body>
 <div>
-    <div>
+    <div id="header">
         <div>
             <h1>MOODLE IES ALIXAR</h1>
         </div>
@@ -25,23 +25,23 @@
         <div>Foros</div>
         <div>Soporte</div>
     </div>
-    <div>
+    <div id="content">
         <div>
-            <div>
+            <div id="Menu">
                 <h4>Menú Principal</h4>
                 <img src="imgs/img.png" alt="">
             </div>
         </div>
-        <div>
-            <div>
-                <img src="./ies.png">
+        <div id="Centro">
+            <div id="Imagen">
+                <img class="ies" src="imgs/img_1.png" alt="">
             </div>
-            <div id="Categoria">
+            <div id="Categorias">
                 Categorías
             </div>
-            <div>
-                <img src="./arbol.png">
-                <ul id="Cursos">
+            <div id="CategoriaTop">
+                <img class="Arbol" src="imgs/img_2.png" alt="">
+                <ul>
                     <li>1º BACHILLERATO <span>(5)</span></li>
                     <li>2º BACHILLERATO <span>(2)</span></li>
                     <li>1º ESO <span>(3)</span></li>
@@ -52,15 +52,15 @@
             </div>
         </div>
         <div>
-            <div>
+            <div id="Calendario">
                 <h4>Calendario</h4>
-                <img src="./calendario.png">
+                <img src="imgs/img_3.png" alt="">
             </div>
         </div>
     </div>
-    <div>
+    <div id="footer">
         <p>Usted no se ha identificado<a href="login.html">Entrar</a></p>
-        <img src="./moodlelogo.gif">
+        <img src="imgs/img_4.png" alt="">
     </div>
 </div>
 </body>
