--- a/Ejercicios/Dual/Dokkan Characters/Index.html
+++ b/Ejercicios/Dual/Dokkan Characters/Index.html
@@ -2,19 +2,90 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Dokkan Characters</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="wrapper">
-<div class="container">
-    <img class="portada" src="media/img.png" alt="9 Anniversary">
-    <img class="separator" src="media/img_1.png" alt="Separator">
-</div>
-<div class="nav">
-    <img src="media/img_2.png" alt="nav">
-</div>
+    <div class="container-fluid text-center position-relative">
+        <img class="portada" src="media/img.png" alt="9 Anniversary">
+        <img class="separator" src="media/img_1.png" alt="Separator">
+    </div>
+    <div class="nav_img">
+        <img src="media/img_2.png" alt="nav">
+    </div>
+
+    <div class="formulario__container">
+        <img class="portada_form" src="media/img_10.png" alt="">
+        <div class="formulario">
+            <form>
+                <div class="form-group">
+                    <article class="form-group__item">
+                        <label for="character_name">Nombre:</label>
+                        <input type="text" name="character_name" placeholder="Character Name" id="character_name">
+                    </article>
+                    <article class="form-group__item">
+                        <label for="type">Type:</label>
+                        <!-- Campo oculto para almacenar el valor del enlace -->
+                        <input type="hidden" name="valor-seleccionado" id="type">
+                        <!-- Enlaces que el usuario puede elegir -->
+                        <a href="#" data-value="AGL" onclick="seleccionarValor(this);"><img src="media/img_5.png" alt="AGL"></a>
+                        <a href="#" data-value="INT" onclick="seleccionarValor(this)"><img src="media/img_7.png" alt="INT"></a>
+                        <a href="#" data-value="TEQ" onclick="seleccionarValor(this)"><img src="media/img_6.png" alt="TEQ"></a>
+                        <a href="#" data-value="STR" onclick="seleccionarValor(this)"><img src="media/img_8.png" alt="STR"></a>
+                        <a href="#" data-value="PHY" onclick="seleccionarValor(this)"><img src="media/img_9.png" alt="PHY"></a>
+                    </article>
+                    <article class="form-group__item">
+                        <label for="rarity">Rarity:</label>
+                        <!-- Campo oculto para almacenar el valor del enlace -->
+                        <input type="hidden" name="valor-seleccionado" id="rarity">
+                        <!-- Enlaces que el usuario puede elegir -->
+                        <a href="#" data-value="LR" onclick="seleccionarValor(this);"><img src="media/LR_logo_apng.png" alt="LR" style="max-width: 70px"></a>
+                        <a href="#" data-value="UR" onclick="seleccionarValor(this)"><img src="media/img_11.png" alt="UR"></a>
+                        <a href="#" data-value="SSR" onclick="seleccionarValor(this)"><img src="media/img_12.png" alt="SSR"></a>
+                        <a href="#" data-value="SR" onclick="seleccionarValor(this)"><img src="media/img_13.png" alt="SR"></a>
+                        <a href="#" data-value="R" onclick="seleccionarValor(this)"><img src="media/img_14.png" alt="R"></a>
+                        <a href="#" data-value="N" onclick="seleccionarValor(this)"><img src="media/img_15.png" alt="N"></a>
+                    </article>
+                    <article class="form-group__item">
+                        <label for="leader_skill">Leader Skill:</label>
+                        <input type="text" id="leader_skill" placeholder="Selecciona una opción">
+                    </article>
+                    <article class="form-group__item">
+                        <label for="link_skill">Link Skill:</label>
+                        <input type="text" id="link_skill" placeholder="Selecciona una opción">
+                    </article>
+                    <article class="form-group__item">
+                        <label for="category">Category:</label>
+                        <input type="text" id="category" placeholder="Selecciona una opción">
+                    </article>
+                    <input type="submit" value="Search">
+                </div>
+            </form>
+        </div>
+    </div>
+    <section class="footer">
+        <p>&copy;Dokkan Characters</p>
+    </section>
 </div>
 
+<script>
+    function seleccionarValor(enlace) {
+        // Obtén el valor del enlace seleccionado
+        const valor = enlace.getAttribute('data-value');
+
+        // Actualiza el campo oculto con el valor seleccionado
+        document.getElementById('valor-seleccionado').value = valor;
+
+        // Opcional: Resalta el enlace seleccionado
+        const enlaces = document.querySelectorAll('a[data-value]');
+        enlaces.forEach(link => link.style.fontWeight = 'normal'); // Restablece el estilo
+        enlace.style.fontWeight= "bold"; // Resalta el enlace seleccionado
+
+        // Previene la navegación del enlace
+        return false;
+    }
+</script>
 </body>
 </html>
