Formulario mejorado e incorporando mejoras en el nav

--- a/Ejercicios/Dual/Dokkan Characters/Index.html
+++ b/Ejercicios/Dual/Dokkan Characters/Index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 <div class="wrapper">
-    <div class="container-fluid text-center position-relative">
-        <img class="portada" src="media/img.png" alt="9 Anniversary">
+    <div class="container-fluid">
+        <img src="media/img.png" alt="9 Anniversary">
         <img class="separator" src="media/img_1.png" alt="Separator">
     </div>
     <div class="nav_img">
         <img src="media/img_2.png" alt="nav">
+        <a href="">Inicio</a>
+        <a href="">Catalogo</a>
     </div>
 
     <div class="formulario__container">
@@ -60,9 +62,13 @@
                         <label for="category">Category:</label>
                         <input type="text" id="category" placeholder="Selecciona una opción">
                     </article>
+
                     <input type="submit" value="Search">
                 </div>
             </form>
+            <img style="width: 90%;margin: 20px" src="media/img_17.png" alt="">
+            <img style="width: 40%;margin: 0 0 10px 0" src="media/img_18.png" alt="">
+            <img class="form_footer" src="media/img_16.png" alt="">
         </div>
     </div>
     <section class="footer">
