Pagina de inicio practicamente terminada, ahora voy a empezar a hacer la página de catalogo

--- a/Ejercicios/Dual/Dokkan Characters/Catalogo.html
+++ b/Ejercicios/Dual/Dokkan Characters/Catalogo.html
@@ -4,8 +4,60 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="stylesCatalogo.css">
+    <link rel="icon" href="media/LR_logo_apng.png" type="image/png">
 </head>
 <body>
+<div class="header">
+<h1>Catálogo de Personajes</h1>
+    <ul class="nav">
+        <li><img class="top" src="media/img_19.png" alt=""></li>
+        <li class="inicio"><a href="Index.html">Inicio</a></li>
+        <li class="catalog"><a href="Catalogo.html">Catalog</a></li>
+    </ul>
+</div>
+
+<div class="catalogo">
+    <img class="form_footer_up" src="media/img_16.png" alt="">
+    <div class="personaje">
+        <img src="mediaCatalog/Card_1028320_thumb_apng.png" alt="Majin Buu">
+        <p>Gohan (Beast)</p>
+    </div>
+    <div class="personaje">
+        <img src="mediaCatalog/Card_1030340_thumb_apng.png" alt="Vegeta Super Saiyan">
+        <p>Super Saiyan 3 Goku (GT) (Golden Giant Ape)</p>
+    </div>
+    <div class="personaje">
+        <img src="mediaCatalog/Card_1022190_thumb_apng.png" alt="Mr. Satán">
+        <p>Goku (Angel) & Vegeta (Angel)</p>
+    </div>
+    <div class="personaje">
+        <img src="mediaCatalog/Card_1020220_thumb_apng.png" alt="Mr. Satán">
+        <p>Super Saiyan 2 Vegeta (Angel)</p>
+    </div>
+    <div class="personaje">
+        <img src="mediaCatalog/Card_1029090_thumb_apng.png" alt="Mr. Satán">
+        <p>Jiren</p>
+    </div>
+    <div class="personaje">
+        <img src="mediaCatalog/Card_1029440_thumb_apng.png" alt="Mr. Satán">
+        <p>Legendary Super Saiyan Broly</p>
+    </div>
+    <div class="personaje">
+        <img src="mediaCatalog/Card_1018880_thumb_apng.png" alt="Mr. Satán">
+        <p>Goku Black (Super Saiyan Rosé)</p>
+    </div>
+    <div class="personaje">
+        <img src="mediaCatalog/Card_1028370_thumb_apng.png" alt="Mr. Satán">
+        <p>Gamma 1 & Gamma 2/Gamma 1</p>
+    </div>
+    <div class="personaje">
+        <img src="mediaCatalog/Card_1016840_thumb_apng.png" alt="Mr. Satán">
+        <p>Super Saiyan 2 Caulifla & Super Saiyan 2 Kale</p>
+    </div>
+    <img class="form_footer" src="media/img_16.png" alt="">
+    <!-- Agrega más personajes aquí -->
+</div>
 
 </body>
+
 </html>
