--- a/Ejercicios/Dual/Dokkan Characters/Index.html
+++ b/Ejercicios/Dual/Dokkan Characters/Index.html
@@ -5,15 +5,17 @@
     <title>Dokkan Characters</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="icon" href="media/LR_logo_apng.png" type="image/png">
 </head>
 <body>
 <div class="wrapper">
     <div class="container-fluid">
-        <img src="media/img.png" alt="9 Anniversary">
+        <img class="portada_img" src="media/img.png" alt="9 Anniversary">
         <img class="separator" src="media/img_1.png" alt="Separator">
     </div>
     <ul class="nav">
         <li class="top"><a href="#"><img src="media/img_19.png" alt=""></a></li>
+        <li class="inicio"><a href="Index.html">Inicio</a></li>
         <li class="catalogo"><a href="Catalogo.html">Catalog</a></li>
     </ul>
 
