Pagina de inicio practicamente terminada, ahora voy a empezar a hacer la página de catalogo

--- a/Ejercicios/Dual/Dokkan Characters/Index.html
+++ b/Ejercicios/Dual/Dokkan Characters/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Dokkan Characters</title>
@@ -12,11 +12,10 @@
         <img src="media/img.png" alt="9 Anniversary">
         <img class="separator" src="media/img_1.png" alt="Separator">
     </div>
-    <div class="nav_img">
-        <img src="media/img_2.png" alt="nav">
-        <a href="">Inicio</a>
-        <a href="">Catalogo</a>
-    </div>
+    <ul class="nav">
+        <li class="top"><a href="#"><img src="media/img_19.png" alt=""></a></li>
+        <li class="catalogo"><a href="Catalogo.html">Catalog</a></li>
+    </ul>
 
     <div class="formulario__container">
         <img class="portada_form" src="media/img_10.png" alt="">
@@ -24,7 +23,7 @@
             <form>
                 <div class="form-group">
                     <article class="form-group__item">
-                        <label for="character_name">Nombre:</label>
+                        <label for="character_name">Name:</label>
                         <input type="text" name="character_name" placeholder="Character Name" id="character_name">
                     </article>
                     <article class="form-group__item">
@@ -65,9 +64,9 @@
 
                     <input type="submit" value="Search">
                 </div>
+                <img style="width: 90%;margin: 20px" src="media/img_17.png" alt="">
+                <img style="width: 40%;margin: 0 0 10px 0" src="media/img_18.png" alt="">
             </form>
-            <img style="width: 90%;margin: 20px" src="media/img_17.png" alt="">
-            <img style="width: 40%;margin: 0 0 10px 0" src="media/img_18.png" alt="">
             <img class="form_footer" src="media/img_16.png" alt="">
         </div>
     </div>
