Pagina de inicio practicamente terminada, ahora voy a empezar a hacer la página de catalogo

--- a/Ejercicios/Dual/Dokkan Characters/Catalogo.html
+++ b/Ejercicios/Dual/Dokkan Characters/Catalogo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="header">
-<h1>Catálogo de Personajes</h1>
+<h1>Character list</h1>
     <ul class="nav">
         <li><img class="top" src="media/img_19.png" alt=""></li>
         <li class="inicio"><a href="Index.html">Inicio</a></li>
